[package]
name = "morphosis-poly"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.13", features = ["derive"] }
log = "0.4.14"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
simple_logger = "2.1.0"
tokio = { version = "1.16.1", features = ["full"] }
morphosis-meta = { path = "../metamorphosis" }